--- a/style.css
+++ b/style.css
@@ -273,8 +273,9 @@ body.theme-christmas {
 }
 
 .score-pop {
-    animation: popOut 0.2s ease-out;
+    animation: popOut 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     color: #fff !important;
+    transform: scale(1.5);
 }
 
 @keyframes popOut {
@@ -283,7 +284,7 @@ body.theme-christmas {
     }
 
     50% {
-        transform: scale(1.25);
+        transform: scale(1.8);
     }
 
     100% {
