--- a/style.css
+++ b/style.css
@@ -254,8 +254,8 @@ body.theme-christmas {
 }
 
 .score-value {
-    font-size: 1.8rem;
-    /* Reduced from 3rem */
+    font-size: 2.5rem;
+    /* Increased from 1.8rem */
     color: white !important;
     font-weight: 900;
     z-index: 5;
@@ -293,11 +293,11 @@ body.theme-christmas {
 }
 
 .gift-score-box.large .score-value {
-    font-size: 3rem;
+    font-size: 4.2rem;
 }
 
 #high-score {
-    font-size: 1rem;
+    font-size: 1.4rem;
     color: white;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
     font-weight: bold;
